--- a/src/frontend/styles/styles.css
+++ b/src/frontend/styles/styles.css
@@ -36,3 +36,13 @@ hr {
 .wrapper-item p {
     color: black;
 }
+
+.content-left {
+    width: 40%;
+}
+
+
+.delete-checkbox {
+    position: relative;
+    right: 40%;
+}
